[package]
name = "buzzy"
version = "0.1.2"
authors = ["Michael Mc Donnell <michael@mcdonnell.dk>"]
edition = "2018"
license = "MIT"
description = "A buzzy browser"
documentation = "https://docs.rs/buzzy"
repository = "https://github.com/buzzybrowser/buzzy"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
